fix responsibility on mobile

--- a/client/src/app/modules/core/components/layout/layout.component.scss
+++ b/client/src/app/modules/core/components/layout/layout.component.scss
@@ -13,7 +13,7 @@
   position: auto;
   left: 0;
   bottom: 0;
-  width: 100%;
+  width: 90%;
   background-color: white;
   color: white;
   text-align: center;
